--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^15.1.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^10.0.0",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.1",
     "tsparticles": "^3.8.0"
