--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.63",
     "ethers": "^6.13.5",
@@ -17,6 +18,7 @@
     "next": "^15.1.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.3",
     "react-responsive": "^10.0.0",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.1",
