--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.21.0",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.63",
+    "axios": "^1.7.9",
     "ethers": "^6.13.5",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
